Parse tree bug fixes: - Root correctly assigns to be the head of the parent-most element. - Morphology/relationship label tool can be dragged around the screen without fear of losing it by dragging too quickly. - Morphology/relationship label tool's form section will scroll if it would overflow.

--- a/static/css/phaidra.scss
+++ b/static/css/phaidra.scss
@@ -125,6 +125,7 @@ a {
 /* Override Bootstrap Styles */
 .container {
 	max-width: none !important;
+	width: 100%;
 }
 .alert {
 	&.alert-success {
